WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52597
Crash beneath PlatformCALayer::adoptSublayers when switching out of tiling mode (null-dereference of a PlatformCALayer)
https://bugs.webkit.org/show_bug.cgi?id=52597
Summary
Crash beneath PlatformCALayer::adoptSublayers when switching out of tiling mo...
Adam Roben (:aroben)
Reported
2011-01-17 14:31:24 PST
Crash beneath PlatformCALayer::adoptSublayers when switching out of tiling mode (null-dereference of a PlatformCALayer)
Attachments
Patch
(9.91 KB, patch)
2011-01-17 14:32 PST
,
Adam Roben (:aroben)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-01-17 14:32:41 PST
Created
attachment 79217
[details]
Patch
Chris Marrin
Comment 2
2011-01-17 14:43:18 PST
Looks good. r=me
> LayoutTests/ChangeLog:12 > + Reviewed by NOBODY (OOPS!).
How come this is below the description?
> Source/WebCore/platform/graphics/ca/win/PlatformCALayerWin.cpp:688 > + for (int i = 0; i < sublayers.size(); ++i)
Would it be any more efficient here to use 'n', since you have to get it anyway? Also, ASSERT(n == sublayers.size()) would be nice
Adam Roben (:aroben)
Comment 3
2011-01-17 14:47:00 PST
(In reply to
comment #2
)
> > > LayoutTests/ChangeLog:12 > > + Reviewed by NOBODY (OOPS!). > > How come this is below the description?
Because I think it's less important than the description, in most cases. But I should email webkit-dev about changing our tools to use this alternate ordering rather than going against the flow.
> > Source/WebCore/platform/graphics/ca/win/PlatformCALayerWin.cpp:688 > > + for (int i = 0; i < sublayers.size(); ++i) > > Would it be any more efficient here to use 'n', since you have to get it anyway?
I guess so.
> Also, ASSERT(n == sublayers.size()) would be nice
Good idea. I'll add that. Thanks for reviewing! (You, too, Darin!)
Adam Roben (:aroben)
Comment 4
2011-01-17 17:51:22 PST
Committed
r75985
: <
http://trac.webkit.org/changeset/75985
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug